Fix Ctrl-A and Ctrl-E to go beginning/end of line
Two issues:
1. Tmux leader key binding was Ctrl-A, so I need to do `bind a
send-prefix` which translates to "Prefix + a should send prefix key".

2. My bindkey needs to be set to emacs, which allows Ctrl-A and Ctrl-E.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,6 @@
+# Reload tmux with
+# :source-file ~/.tmux.conf
+
 # Enable mouse mode
 set -g mouse on
 
@@ -11,10 +14,12 @@ bind-key k select-pane -U
 unbind-key l
 bind-key l select-pane -R
 
-
 # Start windows and panes at 1, not 0. This is because the 0 key is on the other
 # side of the keyboard
 set -g base-index 1
 setw -g pane-base-index 1
 
+# Set C-a to be the prefix key
 set -g prefix C-a
+# Send prefix key to the program running in the current pane
+bind a send-prefix
