--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,3 +23,11 @@ setw -g pane-base-index 1
 set -g prefix C-a
 # Send prefix key to the program running in the current pane
 bind a send-prefix
+
+# How often the status get updates. Default is 15s
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}'
+
+# Automatically renumber windows
+set -g renumber-windows
